trunk/Archive2/9e/0b92bf6ad3d6e7/output
main.cpp: In function 'typename std::result_of<_Functor(_ArgTypes ...)>::type explode(F&&, const std::tuple<_Elements ...>&&)':
main.cpp:33:31: error: type/value mismatch at argument 2 in template parameter list for 'template<long unsigned int K, class R, class F, class Tup> struct Explode'
         const tuple<Args...>&&>::call(
                               ^
main.cpp:33:31: error:   expected a type, got 'std::result_of<_Functor(_ArgTypes ...)>::type'
main.cpp: In function 'typename std::result_of<_Functor(_ArgTypes ...)>::type explode(F&&, const std::tuple<_Elements ...>&&) [with F = int (&)(int, double); Args = {int, double}; typename std::result_of<_Functor(_ArgTypes ...)>::type = int]':
main.cpp:36:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
